fix the navigation z-index

--- a/src/nav/_nav.scss
+++ b/src/nav/_nav.scss
@@ -9,6 +9,7 @@
     left: 0;
     right: 0;
     background: $clr-black;
+    z-index: 10;
     
     #navContent {        
         display: flex;
